# reflex-pdfslick

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
custom_components/reflex_pdfslick/: PdfSlickWrapper.tsx  __init__.py  commands.py  models.py  options.py  pdfslick.py  pdfslick.pyi
custom_components/reflex_pdfslick/js/: PdfSlickWrapper.tsx
pdfslick_demo/: requirements.txt  rxconfig.py
pdfslick_demo/pdfslick_demo/: examples.py  pdfslick_demo.py  state.py
specs/api/: component-api.md
specs/data-model/: store-schema.md
specs/plans/: implementation-plan.md
specs/prd/: pdfslick-component.md
specs/research/: pdfslick-and-reflex-research.md
specs/tasks/: task-breakdown.md
specs/technical/: architecture.md
tests/: conftest.py  test_commands.py  test_component.py  test_demo.py  test_events.py  test_imports.py  test_models.py  test_thumbnails.py
